Fixed paragraph spacing

--- a/src/components/user/Paragraph/style.scss
+++ b/src/components/user/Paragraph/style.scss
@@ -1,6 +1,8 @@
 .sb-paragraph {
-  display: block;
-  width: 100%;
+  &__input {
+    display: block;
+    width: 100%;
+  }
 
   &_align {
     &-left { .sb-paragraph__input { text-align: left; } }
